    - Fix up miniiso creation to fit into the new build system better.
    - Turn on miniiso creation for netboot, so there is a
      dest/netboot/mini.iso that behaves the same as a netboot would.
    - Add a dest/cdrom/debian-cd_info.tar.gz with the syslinux screens
      and splash image, for eventual use by debian-cd.
    - Convert the miniiso to use isolinux, to support any size initrd.
  * Richard Hirst
    - ia64: Fix cdrom to autoboot, and tidy up kernel params.  Partial
      fix for 227114.
    - ia64: Change to 2.4.22 -di kernel, and include usb storage modules,
      and ide/scsi core modules.  Partial fix for 227114.
    - Increase ia64 'floppy' image to 10MB, and initrd to 24MB
    - hppa: Add config/type/netboot-hppa, so TYPE=netboot generates a lifimage
    - hppa: include fdisk-udeb in pkglists so we can partition.
    - hppa: include text frontend, as it is useful for debugging.
    - hppa: fix up palo cmdline for netboot lifimage
  * Stephen R. Marenka
    - m68k: update/create pkg-lists/cdrom/m68k pkg-lists/netboot/m68k.
    - m68k: add some more devices to help support 2.2.25.
  * Jeff Bailey
    - sparc: Update config/arch/linux-sparc to show 2.4.24 and di flavour
    - sparc: Remove ide-modules and scsi-modules - they're built in.
    - sparc: Update kernel version in mirror-udeb list.
    - sparc: Update config/sparc.cfg to show 2.4.24 and di flavour

 -- Joey Hess <joeyh@debian.org>  Fri,  2 Jan 2004 14:48:13 -0500

debian-installer (20040102) unstable; urgency=low

  * Another day, another build. This one has updated busybox in it.

 -- Joey Hess <joeyh@debian.org>  Fri,  2 Jan 2004 14:48:13 -0500

debian-installer (20040101) unstable; urgency=low

  * Giuseppe Sacco
    - Corrected a small error in make/arch/linux-powerpc about
    - the creation of a boot.msg
  * Joey Hess
    - Minor consistency fix in f10.txt.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jan 2004 13:48:56 -0500

debian-installer (20031230) unstable; urgency=low
