@@ -6,6 +6,8 @@ EXTRATARGETS = build_floppy_access-drivers
 TARGET = $(ROOT)
 EXTRANAME = $(FLAVOUR)/
 
+MANIFEST-ROOT = "second floppy for the blind"
+
 # No kernel.
 KERNELNAME =
 
