@@ -3,6 +3,8 @@ DISK_LABEL = "CD-ROM drivers floppy"
 TARGET = $(EXTRA)
 EXTRANAME = $(FLAVOUR)
 
+MANIFEST-EXTRA = "CD drivers, including all SCSI drivers"
+
 # No kernel.
 KERNELNAME =
 
